fix: fixing dark mode for tutorial highlight

--- a/apps/zipper.dev/src/components/playground/playground-styles.module.css
+++ b/apps/zipper.dev/src/components/playground/playground-styles.module.css
@@ -2,6 +2,10 @@
   background-color: #FEF0C7;
 }
 
+.dark-tutorial-line-enable {
+  background-color: #413C26;
+}
+
 .tutorial-line-unable {
   background-color: transparent;
 }
@@ -11,7 +15,13 @@
   color: #DC6803;
 }
 
+.dark-tutorial-line-margin-enable {
+  background-color: #413C26;
+  color: #DC6803;
+}
+
 .tutorial-line-margin-unable {
   background-color: transparent;
   color: default;
 }
+
